BE-67, chore: apply formatter
Signed-off-by: Yejin Kelly Joo <yejinkellyjoo@gmail.com>